Añadido spring y test de javafx #2 #3